@@ -53,6 +53,7 @@
   *  - Fixed LowLevel PrinterHost demo not sending control requests to the attached printer with the correct printer interface wIndex value
   *  - Added LEDs_ToggleLEDs() function to several board LED drivers which were missing it (thanks to Andrei Krainev)
   *  - Fixed SET FEATURE and CLEAR FEATURE control requests directed at an unconfigured endpoint causing request timeouts
+  *  - Fixed incorrect signature reported in the CDC class bootloader for the ATMEGA32U2
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
